# apache-beam-labs

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: word_counts.txt
data/challenge/: sample1000.csv
src/advanced_transforms/: dead_letter_queue.py  reshuffle.py  splittable_dofn.py  stateful_dofn.py
src/case_studies/identify_banks_defaulter_customers/: skippers_defaulters.py
src/challenges/: word_count.py
src/challenges/tour_of_beam/: 1_challenge.py
src/common_transforms/: count.py  filter.py  map.py  max.py  mean.py  min.py  sum.py  with_keys.py
src/core_transforms/: additional_outputs.py  branching.py  cogroupkey.py  combine.py  composite_transform.py  flatten.py  partition.py  side_input.py
src/core_transforms/combine/: combine.py  combine_by_key.py  combine_fn.py
src/core_transforms/map/: co_group_key.py  flat_map.py  group_by_key.py  map.py  pardo_one_to_many.py  pardo_one_to_one.py
src/io_connectors/: write_text.py
src/io_connectors/avro/: read_avro.py  write_avro.py
src/io_connectors/bigqueryio/: read_query_bq.py  read_table_bq.py  write_bq.py
src/io_connectors/parquet/: read_parquet.py  write_parquet.py
src/io_connectors/text-io/: read_gcs.py  read_text.py  write_gcs.py  write_text.py
src/splittable_dofn/: splittable_dofn.py
src/transformers/: additional_outputs.py  composite_transform.py  flatmap.py  map.py  side_input.py  word_count.py
src/triggers/: after_processing_time.py  after_watermark.py  composite_trigger.py  repeatedly.py
src/windowing/: fixed_window.py  global_window.py  session_window.py  sliding_window.py
tests/: test_combine_fns.py  test_metrics_combine_fn.py  test_routing.py  test_side_input.py  test_stateful_dofn.py
