[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apache-beam-labs"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apache-beam[gcp]==2.71.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov==5.0.0",
    "ruff==0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
